syntax = "proto3";

option go_package = "github.com/Frank-Mayer/inno-lab/internal/schema";

enum Command {
    GET_INPUT_POSITION = 0;
    RETURN_INPUT_POSITION = 1;
    REGISTER_PROMPT = 2;
    PROMPT_FINISHED = 3;
}

message Message {
    Command command = 1;
    int32 x = 2;
    int32 y = 3;
    string prompt = 4;
    string url = 5;
}
